@@ -22,6 +22,13 @@
    <h2>Usage directions for Nostalgy</h2>
 
    <p>
+   Please visit
+   <a href="http://alain.frisch.fr/soft_mozilla.html">Nostalgy's
+   homepage</a>. It contains a copy of this page that might be
+   better read in your browser!
+   </p>
+
+   <p>
    Nostalgy adds several keyboard shortcuts to improve your
    productivity with Thunderbird. A custom preference dialog 
    for Nostalgy is available through the Tools menu. Below we
@@ -143,6 +150,31 @@ uppercase, you don't need to press Shift.</p>
    it is global.
    </p>
 
+   <h3>Exporting and importing rules</h3>
+
+   <p>
+   Nostalgy comes with a backup system for rules. In the Preferences
+   dialog (tab "Rules"), there is a button "Send rules by email".
+   It allows you to send an e-mail to any address (your own address
+   by default). This special e-mail contains a copy of all your rules.
+   When you read such an e-mail, Thunderbird will show you
+   a button "Import Nostalgy rules", which will allow you to import
+   all the rules found in the message.
+   </p>
+
+   <p>
+   This import/export feature can be used as a backup mechanism, or to
+   exchange rules between various computer or Thunderbird profiles.
+   </p>
+
+   <p>
+   <b>IMPORTANT:</b> importing rules from an e-email will destroy your
+   current rules. Use this feature with caution. Also, don't import
+   rules from an e-mail sent by a user you don't trust (this could
+   allow arbitration Javascript code execution).
+   </p>
+   
+
    <h3>QuickSearch</h3>
 
    <p>Nostalgy adds a few features to Thunderbird's QuickSearh features.</p>
@@ -253,7 +285,7 @@ the input box starts with a colon character, or if no folder matches.
 
    <hr/>
 
-   <p>The Nostalgy extension has been written by Alain Frisch (<tt>Alain.Frisch@inria.fr</tt>). Comments and suggestions are welcome!  Donations
+   <p>The Nostalgy extension has been written by Alain Frisch (<a href="mailto:alain@frisch.fr">alain@frisch.fr</a>). Comments and suggestions are welcome!  Donations
 can be sent to the Paypal account <tt>alain@frisch.fr</tt>.</p>
   </body>
 </html>
