@@ -45,6 +45,58 @@ var keys = [
    };
 })();
 
+function NostalgySendRules() {
+  var sAccountManager = 
+    Components.classes["@mozilla.org/messenger/account-manager;1"].
+    getService(Components.interfaces.nsIMsgAccountManager);
+  
+  var identity = 
+    sAccountManager.allIdentities.GetElementAt(0).
+    QueryInterface(Components.interfaces.nsIMsgIdentity);
+
+  var to = prompt("Do you want to send a mail to yourself (or someone else)\n"
++ "with your current set of Nostalgy's rules?  If yes, choose the address.", identity.email);
+  if (!to) return;
+
+  var gMsgCompose = 
+    Components.classes["@mozilla.org/messengercompose/compose;1"].
+    createInstance(Components.interfaces.nsIMsgCompose);
+  
+  var params = 
+    Components.classes["@mozilla.org/messengercompose/composeparams;1"].
+    createInstance(Components.interfaces.nsIMsgComposeParams);
+  
+  var compfields =
+    Components.classes["@mozilla.org/messengercompose/composefields;1"].
+    createInstance(Components.interfaces.nsIMsgCompFields);
+  
+  var progress = 
+    Components.classes["@mozilla.org/messenger/progress;1"].
+    createInstance(Components.interfaces.nsIMsgProgress);
+
+  var account = sAccountManager.defaultAccount;
+  
+  compfields.to = to;
+  compfields.subject = "Nostalgy Rules from " + identity.fullName;
+  compfields.body = "This e-mail was automatically generated by Nostalgy (Thunderbird Extension). It stores a set of Nostalgy rules.\nIf you read this message under Thunderbird, with Nostalgy installed, you can import these rules by clicking on the 'Extract Nostalgy rules' button that should appear above.\n\nFor more information about Nostalgy: http://alain.frisch.fr/soft_mozilla.html\n\nBEGIN RULES\n" + MkPrefStr() + "\nEND RULES\n\n";
+  
+  params.identity = identity;
+  params.composeFields = compfields;
+  params.format = 2;  // PlainText
+  
+  var tmp_win = 
+    window.open("chrome://nostalgy/content/dummy_window.xul", "_blank", 
+		"chrome,dialog='no',width=0,height=0,centerscreen,alwaysLowered");
+  setTimeout(function(){ tmp_win.minimize(); },2000);
+
+  gMsgCompose.Initialize(tmp_win, params );
+
+  gMsgCompose.SendMsg(Components.interfaces.nsIMsgCompDeliverMode.Now, 
+		      identity, account.key, null, progress);
+}
+
+
+
 function SetItem(item, rule) {
   var f = item.childNodes.item(0);
   var lab = "";
