@@ -1,16 +1,16 @@
-content/about.xhtml
 content/about.xul
-content/composer.js
-content/composerOverlay.xul
-content/edit_prefs.js
 content/edit_prefs.xul
-content/edit_rule.js
+content/thunderbirdOverlay.xul
+content/dummy_window.xul
+content/composer.js
+content/messageOverlay.xul
+content/about.xhtml
 content/edit_rule.xul
 content/folders.js
-content/messageOverlay.xul
+content/edit_rule.js
+content/composerOverlay.xul
+content/edit_prefs.js
 content/nostalgy.js
-content/thunderbirdOverlay.xul
-content/.#nostalgy.js.1.34
 locale/en-US/nostalgy.dtd
 locale/en-US/nostalgy.properties
 defaults/preferences/nostalgy.js
